2012-07-11  Tony Chang  <tony@chromium.org>

        [chromium] Remove drag and drop API methods that are no longer used
        https://bugs.webkit.org/show_bug.cgi?id=90996

        Reviewed by Adam Barth.

        Migrate DRT to use the methods that take modifier keys.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::doDragDrop):
        (EventSender::doMouseUp):
        (EventSender::doMouseMove):
        (EventSender::beginDragWithFiles):

2012-07-11  Mark Rowe  <mrowe@apple.com>

        Add a Mountain Lion version of libWebKitSystemInterface.a.

        Reviewed by John Sullivan.

        * Scripts/copy-webkitlibraries-to-product-directory: Include libWebKitSystemInterfaceMountainLion.a in the list of libraries to copy.

2012-07-09  Mark Rowe  <mrowe@apple.com>

        <http://webkit.org/b/90835> Teach bisect-builds to work with a Safari.app that has entitlements.

        Reviewed by Dan Bernstein.

        * Scripts/bisect-builds: Use safariPathFromSafariBundle to determine which binary within the application
        should be invoked.

2012-07-11  Zan Dobersek  <zandobersek@gmail.com>

        [Gtk] fast/events/keydown-function-keys.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=90891

        Reviewed by Martin Robinson.

        Work around the context menu being shown on F10 key being pressed by
        unbiding the key when running tests in DumpRenderTree. The problem
        appears when using a recent version of the xkeyboard-config package.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (setDefaultsToConsistentStateValuesForTesting):

2012-07-11  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt] QRawWebView should notify when rendering is done, so that pixel results can be grabbed at the appropriate moment.
        https://bugs.webkit.org/show_bug.cgi?id=90641

        Reviewed by Jocelyn Turcotte.

        * MiniBrowser/qt/raw/View.h: Comment used old class name (WKView).